# intersim

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
core/: CMakeLists.txt
core/CMake/: Core_Defines.h.in
core/include/: intersim.hpp
core/include/InterSim/: Simulation.h
core/include/Simulation/: Simulation_Type_Wave.hpp
core/include/Solver/: Solver.hpp  Solver_Matrix.hpp
core/include/data/: Data.hpp  state.hpp
core/include/intersim/: state.h
core/include/simulation/: simulation.hpp  simulation_type.hpp  solver.hpp  wave_simulation.hpp
core/pyintersim/: corelib.py  state.py
core/src/: intersim.cpp
core/src/Data/: Data.cpp
core/src/InterSim/: Simulation.cpp
core/src/Simulation/: Simulation_Type_Wave.cpp
core/src/Solver/: Solver.cpp  Solver_Matrix.cpp
core/src/intersim/: state.cpp
core/src/simulation/: simulation.cpp  simulation_type.cpp  solver.cpp  wave_simulation.cpp
core/test/: test.cpp
ui-console/: CMakeLists.txt
ui-console/src/: main.cpp
ui-python/: console.py
ui-qt/: CMakeLists.txt
ui-qt/src/: main.cpp
